# belvedere

./: CLAUDE.md  Cargo.toml  GASTOWN_POC_COMPLETE_CODE.md  GASTOWN_POC_SUMMARY.md  README.md  gastown-architecture-study.md  zed-agent-panel-analysis.md
.beads/: issues.jsonl
.github/workflows/: after_release.yml  autofix_pr.yml  bump_patch_version.yml  cherry_pick.yml  compare_perf.yml  danger.yml  extension_bump.yml  extension_release.yml  extension_tests.yml  extension_workflow_rollout.yml  release.yml  release_nightly.yml  run_agent_evals.yml  run_bundling.yml  run_cron_unit_evals.yml  run_tests.yml  run_unit_evals.yml
crates/belvedere/src/: agent_discovery.rs  belvedere.rs  main.rs  town_item.rs
crates/gastown/: Cargo.toml  TESTING.md
crates/gastown/src/: agent_section.rs  convoy_section.rs  dashboard_buffer.rs  dashboard_buffer_tests.rs  gastown.rs  main.rs  rig_section.rs  town.rs
crates/gazetown/: Cargo.toml
crates/gazetown/src/: main.rs  town.rs
crates/git_ui/: RIG_TESTS_SUMMARY.md
crates/git_ui/src/: git_ui.rs  rig_git_diff_tests.rs
crates/terminal_view/src/: gt_command_tests.rs  terminal_view.rs
extensions/workflows/shared/: bump_version.yml
gazetown/.beads/: issues.jsonl
script/: clippy
tooling/xtask/src/tasks/workflows/: danger.rs  run_tests.rs  runners.rs  steps.rs
