[package]
name = "gastown"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
description = "Gas Town - Multi-agent development workspace UI"

[lib]
path = "src/gastown.rs"

[[bin]]
name = "gastown"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
collections.workspace = true
dirs.workspace = true
env_logger.workspace = true
gpui = { workspace = true, features = ["wayland", "x11", "font-kit"] }
theme.workspace = true
ui.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
