[package]
name = "gazetown"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
description = "Pure GPUI agent orchestration application"
authors = ["Gazetown Team"]

[lints]
workspace = true

[[bin]]
name = "gazetown"
path = "src/main.rs"

[dependencies]
agent.workspace = true
agent_ui.workspace = true
agent_settings.workspace = true
anyhow.workspace = true
assets.workspace = true
collections.workspace = true
db.workspace = true
dirs.workspace = true
env_logger.workspace = true
futures.workspace = true
git.workspace = true
git_ui.workspace = true
gpui = { workspace = true, features = ["wayland", "x11", "font-kit"] }
gpui_tokio.workspace = true
language.workspace = true
languages = { workspace = true, features = ["load-grammars"] }
log.workspace = true
parking_lot.workspace = true
paths.workspace = true
project.workspace = true
proto.workspace = true
release_channel.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
telemetry.workspace = true
telemetry_events.workspace = true
theme.workspace = true
tracing.workspace = true
ui.workspace = true
url.workspace = true
util.workspace = true
uuid.workspace = true
ztracing.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
ashpd.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
